--- a/node/2.4 QR Code Project/package.json
+++ b/node/2.4 QR Code Project/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
-    "inquirer": "^9.2.10"
-  }
+    "inquirer": "^9.2.10",
+    "qr-image": "^3.2.0"
+  },
+  "name": "2.4-qr-code-project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "type": "module",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
